# rtems

./: .gitignore  build-rtems.sh  patmos.sh  readme.txt  run-testsuite.sh  target-change.sh
c/: TOOL_TARGETS
c/src/aclocal/: prog-cc.m4  rtems-cpu-subdirs.m4
c/src/lib/libbsp/patmos/: Makefile.am  acinclude.m4  configure.ac
c/src/lib/libbsp/patmos/pasim/: Makefile.am  configure.ac  preinstall.am
c/src/lib/libbsp/patmos/pasim/clock/: ckinit.c
c/src/lib/libbsp/patmos/pasim/console/: console.c  debugputs.c
c/src/lib/libbsp/patmos/pasim/include/: bsp.h  pasim.h
c/src/lib/libbsp/patmos/pasim/make/custom/: pasim.cfg
c/src/lib/libbsp/patmos/pasim/startup/: bspidle.S  bspstart.c  linkcmds  spurious.c
c/src/lib/libbsp/patmos/pasim/timer/: timer.c
c/src/lib/libbsp/patmos/pasim/tools/: configure.ac
c/src/lib/libbsp/patmos/shared/: bspgetworkarea.c  libsyms.ll  start.S
c/src/lib/libbsp/patmos/shared/clock/: ckinit.c
c/src/lib/libbsp/patmos/shared/console/: console.c  debugputs.c
c/src/lib/libbsp/patmos/shared/noc/: noc.c  noc.h
c/src/lib/libbsp/patmos/shared/startup/: linkcmds.base  start.S
c/src/lib/libbsp/patmos/tcrest/: Makefile.am  configure.ac  preinstall.am
c/src/lib/libbsp/patmos/tcrest/include/: bsp.h  tcrest.h
c/src/lib/libbsp/patmos/tcrest/make/custom/: tcrest.cfg
c/src/lib/libbsp/patmos/tcrest/startup/: linkcmds
c/src/lib/libbsp/patmos/tcrestmp/: Makefile.am  configure.ac  preinstall.am
c/src/lib/libbsp/patmos/tcrestmp/include/: bsp.h  tcrestmp.h
c/src/lib/libbsp/patmos/tcrestmp/make/custom/: tcrestmp.cfg
c/src/lib/libbsp/patmos/tcrestmp/startup/: linkcmds
c/src/lib/libcpu/patmos/: Makefile.am  configure.ac  preinstall.am
c/src/lib/libcpu/patmos/cache/: cache.c  cache_.h
c/src/lib/libcpu/patmos/exceptions/: exceptions.c  exceptions.h
c/src/make/: Makefile.am
cpukit/: configure.ac
cpukit/aclocal/: prog-cc.m4
cpukit/score/cpu/: Makefile.am
cpukit/score/cpu/patmos/: Makefile.am  cpu.c  preinstall.am
cpukit/score/cpu/patmos/rtems/: asm.h
cpukit/score/cpu/patmos/rtems/score/: cpu.h  patmos.h  types.h
cpukit/score/src/: threadinitialize.c  threadloadenv.c
make/: Makefile.am
make/compilers/: patmos-clang.cfg
make/custom/: default.cfg
testsuites/aclocal/: prog-cc.m4
testsuites/libtests/block01/: block01.scn
testsuites/libtests/block02/: block02.scn
testsuites/libtests/block03/: block03.scn
testsuites/libtests/block04/: block04.scn
testsuites/libtests/block05/: block05.scn
testsuites/libtests/block06/: block06.scn
testsuites/libtests/block07/: block07.scn
testsuites/libtests/block08/: block08.scn
testsuites/libtests/block09/: block09.scn
testsuites/libtests/block10/: block10.scn
testsuites/libtests/block12/: block12.scn
testsuites/libtests/bspcmdline01/: bspcmdline01.scn
testsuites/libtests/cpuuse/: cpuuse.scn
testsuites/libtests/flashdisk01/: flashdisk01.scn
testsuites/libtests/heapwalk/: heapwalk.scn
testsuites/libtests/malloctest/: malloctest.scn
testsuites/libtests/math/: math.scn
testsuites/libtests/mathf/: mathf.scn
testsuites/libtests/monitor/: monitor.scn
testsuites/libtests/monitor02/: monitor02.scn
testsuites/libtests/rtmonuse/: rtmonuse.scn
testsuites/libtests/stackchk/: stackchk.scn
testsuites/libtests/stackchk01/: stackchk01.scn
testsuites/libtests/stringto01/: stringto01.scn
testsuites/libtests/termios/: termios.scn
testsuites/libtests/termios01/: termios01.scn
testsuites/libtests/termios02/: termios02.scn
testsuites/libtests/tztest/: tztest.scn
testsuites/psxtests/psx01/: psx01.scn
testsuites/psxtests/psx02/: psx02.scn
testsuites/psxtests/psx03/: psx03.scn
testsuites/psxtests/psx04/: psx04.scn
testsuites/psxtests/psx05/: psx05.scn
testsuites/psxtests/psx06/: psx06.scn
testsuites/psxtests/psx07/: psx07.scn
testsuites/psxtests/psx08/: psx08.scn
testsuites/psxtests/psx09/: psx09.scn
testsuites/psxtests/psx10/: psx10.scn
testsuites/psxtests/psx11/: psx11.scn
testsuites/psxtests/psx12/: psx12.scn
testsuites/psxtests/psx13/: psx13.scn
testsuites/psxtests/psx14/: psx14.scn
testsuites/psxtests/psx16/: psx16.scn
testsuites/psxtests/psxalarm01/: psxalarm01.scn
testsuites/psxtests/psxautoinit01/: psxautoinit01.scn
testsuites/psxtests/psxautoinit02/: psxautoinit02.scn
testsuites/psxtests/psxbarrier01/: psxbarrier01.scn
testsuites/psxtests/psxcancel/: psxcancel.scn
testsuites/psxtests/psxcancel01/: psxcancel01.scn
testsuites/psxtests/psxcleanup/: psxcleanup.scn
testsuites/psxtests/psxcleanup01/: psxcleanup01.scn
testsuites/psxtests/psxclock/: init.c  psxclock.scn
testsuites/psxtests/psxcond01/: psxcond01.scn
testsuites/psxtests/psxeintr_join/: psxeintr_join.scn
testsuites/psxtests/psxenosys/: psxenosys.scn
testsuites/psxtests/psxfatal01/: psxfatal01.scn
testsuites/psxtests/psxfatal02/: psxfatal02.scn
testsuites/psxtests/psxfile01/: psxfile01.scn
testsuites/psxtests/psxintrcritical01/: psxintrcritical01.scn
testsuites/psxtests/psxitimer/: psxitimer.scn
testsuites/psxtests/psxkey01/: psxkey01.scn
testsuites/psxtests/psxkey02/: psxkey02.scn
testsuites/psxtests/psxkey03/: psxkey03.scn
testsuites/psxtests/psxmount/: psxmount.scn
testsuites/psxtests/psxmsgq01/: psxmsgq01.scn
testsuites/psxtests/psxmsgq02/: psxmsgq02.scn
testsuites/psxtests/psxmsgq03/: psxmsgq03.scn
testsuites/psxtests/psxmsgq04/: psxmsgq04.scn
testsuites/psxtests/psxmutexattr01/: psxmutexattr01.scn
testsuites/psxtests/psxobj01/: psxobj01.scn
testsuites/psxtests/psxpasswd01/: psxpasswd01.scn
testsuites/psxtests/psxrdwrv/: psxrdwrv.scn
testsuites/psxtests/psxreaddir/: psxreaddir.scn
testsuites/psxtests/psxrwlock01/: psxrwlock01.scn
testsuites/psxtests/psxsem01/: psxsem01.scn
testsuites/psxtests/psxsignal01/: psxsignal01.scn
testsuites/psxtests/psxsignal02/: psxsignal02.scn
testsuites/psxtests/psxsignal03/: psxsignal03.scn
testsuites/psxtests/psxsignal04/: psxsignal04.scn
testsuites/psxtests/psxsignal05/: psxsignal05.scn
testsuites/psxtests/psxspin01/: psxspin01.scn
testsuites/sptests/sp01/: sp01.scn
(+161 files in other folders)
